--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -1,5 +1,18 @@
 .container {
     box-sizing: border-box;
-    width: 100%;
-    padding: 0 16px;
+    max-width: calc(1184px + 48px + 48px);
+    margin: 0 auto;
+    padding: 0 48px;
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0 24px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .container {
+        padding: 0 16px;
+    }
 }
