--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
-    max-width: 1184px;
-    height: 52px;
+    max-width: 100%;    
+    max-height: 52px;
     margin: 0 auto;
     margin-top: 28px;
     display: flex;
@@ -8,9 +8,8 @@
     align-items: center;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 425px) {
     .header {
         margin-top: 16px;
-        height: 42px;
     }
 }
