--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,6 @@
 @import url("../blocks/container/container.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/header/__links/header__links.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
+@import url("../blocks/header/__lang-link/_active/header__lang-link_active.css");
