--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,24 @@
 .header {
-    max-width: 100%;    
-    max-height: 52px;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 52px;
+    padding: 0 48px;
+    margin: 0 auto;
     margin-top: 28px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 984px) {
     .header {
+        padding: 0 24px; 
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .header {
+        padding: 0 16px;
         margin-top: 16px;
     }
 }
