--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,8 @@
 .lead__image {
-    max-width: 100vw;
+    max-width: 100%;
+    display: block;
+    margin: auto;
+    margin-top: 64px;
 }
 
 @media screen and (max-width : 768px) {
