--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,3 +9,15 @@
     color: #FFFFFF;
 }
 
+@media screen and (max-width: 984px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
+
+@media screen and (max-width: 675px) {
+    .lead__caption {
+        padding-left: 16px;
+    }
+}
+
