--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,7 @@
 .lead__subtitle {
-    margin: 0;
+    margin: 0 auto;
     margin-top: 32px;
+    max-width: 640px;
     font-weight: 400;
     font-size: 30px;
     line-height: 36px;
@@ -8,11 +9,11 @@
     color: #FFFFFF;
 }
 
-@media screen and (max-width: 425px) {
-    .lead__subtitle{
+@media screen and (max-width: 675px) {
+    .lead__subtitle {
         margin-top: 16px;
         font-size: 16px;
-        line-height: 20px;
+        line-height: 20px;  
     }
-    
 }
+
