--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,10 +1,18 @@
 .lead {
-    margin-top: 56px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0 148px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1140px) {
     .lead {
-        margin-top: 48px;
+        padding: 0 48px;
+    }
+}
+
+@media screen and (max-width: 984px) {
+    .lead {
+        padding: 0;
     }
 }
 
