--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,6 +14,7 @@
 
 @media screen and (max-width: 984px) {
     .photo-grid {
+        margin-top: 88px;
         padding: 0 24px;
         grid-gap: 16px;
     }
@@ -21,6 +22,7 @@
 
 @media screen and (max-width: 675px) {
     .photo-grid {
+        margin-top: 60px;
         padding: 0 16px;
         grid-gap: 12px;
     }
