--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,5 +1,5 @@
 .place__link {
-    text-decoration: underline;
+    text-decoration-line: underline;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
