--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -21,4 +21,14 @@
     .place__paragraph:nth-of-type(1) {
         margin-bottom: 25px;
     }
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 163%;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .place__paragraph {
+        padding: 0 16px;
+    }
 }
