--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,23 @@
 .place__title {
-    
+    max-width: 460px;
     margin: 0;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #FFFFFF;
+}
+
+@media screen and (max-width: 984px) {
+    .place__title {
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .place__title {
+        padding: 0 16px;
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
