--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,3 +9,16 @@
         gap: 48px 32px;
     }
 }
+
+@media screen and (max-width: 984px) {
+    .place {
+        gap: 48px 28px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .place {
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+}
