--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,3 +10,18 @@
         padding: 0 48px;
     }
 }
+
+@media screen and (max-width: 984px) {
+    .places {
+        padding: 0 24px;
+        gap: 73px;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .places {
+        padding: 0;
+        gap: 50px;
+    }
+}
+
