fixed bugs after first session

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,6 @@
 .footer__copyright {
+    margin: 0;
+    display: block;
     font-weight: 400;
     font-size: 14px;
     line-height: 16px;
@@ -7,6 +9,7 @@
 
 @media screen and (max-width: 568px) {
     .footer__copyright {
+        margin-top: 48px;
         line-height: 14px;
     }
 }
