--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,6 +14,8 @@
 
 @media screen and (max-width: 568px) {
     .footer__link {
+        display: block;
+        margin-bottom: 32px;
         font-size: 24px;
         line-height: 24px;
     }
