--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -10,10 +10,7 @@
 
 @media screen and (max-width: 568px) {
     .footer__links{
-        min-height: 248px;
         width: 158px;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-between;
+        display: block;
     }
 }
