--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -16,10 +16,7 @@
 
 @media screen and (max-width: 568px) {
     .footer {
+        display: block;
         padding: 0 16px;
-        min-height: 310px;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: flex-start;
     }
 }
