--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,6 +4,16 @@
     font-size: 24px;
     line-height: 28px;
     color: #FFFFFF;
+    opacity: 1;
+    transition: opacity .3s ease-in;
+}
+
+.header__lang-link:first-of-type{
+    margin-right: 18px;
+}
+
+.header__lang-link:hover {
+    opacity: .8;
 }
 
 
