--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,12 +3,12 @@
     padding: 0 48px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    grid-gap: 16px;
+    gap: 16px;
 }
 
 @media screen and (max-width: 1140px) {
     .photo-grid {
-        grid-gap: 14px;
+        gap: 14px;
     }
 }
 
@@ -16,7 +16,7 @@
     .photo-grid {
         margin-top: 88px;
         padding: 0 24px;
-        grid-gap: 16px;
+        gap: 16px;
     }
 }
 
@@ -24,7 +24,7 @@
     .photo-grid {
         margin-top: 60px;
         padding: 0 16px;
-        grid-gap: 12px;
+        gap: 12px;
     }
 }
 
