--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-    margin: 0;
+    margin: 0 0 26px;
     max-width: 484px;
     font-weight: 400;
     font-size: 18px;
@@ -7,23 +7,20 @@
     color: #FFFFFF;
 }
 
-.place__paragraph:nth-of-type(1) {
-    margin-bottom: 26px;
+.place__paragraph:last-of-type {
+    margin: 0;
 }
 
 @media screen and (max-width: 1140px) {
-    .place__paragraph:nth-of-type(1) {
+    .place__paragraph {
         margin-bottom: 27px;
     }
 }
 
 @media screen and (max-width: 984px) {
-    .place__paragraph:nth-of-type(1) {
-        margin-bottom: 25px;
-    }
     .place__paragraph {
         font-size: 16px;
-        line-height: 163%;
+        margin-bottom: 25px;
     }
 }
 
