fixed bugs in cover section + other bugs in @media

--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("../../../images/cover-background.png");
+    background-image: url("../../../images/cover-background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
