--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -7,3 +7,9 @@
     line-height: 163%;
     color: #fff;
 }
+
+@media screen and (max-width: 984px) {
+    .intro__text {
+        max-width: 720px;
+    }
+}
