--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -13,6 +13,7 @@
 
 @media screen and (max-width: 984px) {
     .places {
+        margin-top: 88px;
         padding: 0 24px;
         gap: 73px;
     }
@@ -20,6 +21,7 @@
 
 @media screen and (max-width: 568px) {
     .places {
+        margin-top: 64px;
         padding: 0;
         gap: 50px;
     }
